<resources>
    <string name="app_name">Rummy Register</string>
    <string name="action_settings">Settings</string>
    <string name="no_player">No player added</string>
    <string name="score">score</string>
    <string name="player">player</string>
    <string name="enter_name">Enter name</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="position">position</string>
    <string name="sub">Sub</string>
    <string name="sort">sort</string>
    <string name="enter_bet_amount">Enter bet amount</string>
    <string name="welcome_note">Welcome.To start a new game enter game details and press start.</string>
    <string name="game_point">Enter game point</string>
    <string name="start">start</string>
    <string name="from">from</string>
</resources>
